# PinscapePico

./: .gitignore  How-to-build.md  LICENSE  LedWizEmulationOptions.md  License.txt  PinscapePico.sln  PinscapeVersion.h  README.md  build-and-release.bat  build-release-zip.bat  populate-release-zip.bat
ButtonLatencyTester/: ButtonLatencyTester.cpp  ButtonLatencyTester.vcxproj  ButtonLatencyTester.vcxproj.filters  HiResTimer.h  README.md
ButtonLatencyTester2/: README.md  USBProtocol.h
ButtonLatencyTester2/ConnectorBoard/: ButtonLatencyTester2 - BOM.csv  ButtonLatencyTester2.brd  ButtonLatencyTester2.sch  README.md
ButtonLatencyTester2/Firmware/: .gitignore  ButtonLatencyTester2.h  CMakeLists.txt  Main.cpp  PicoLED.cpp  PicoLED.h  Reset.cpp  USBImpl.cpp  USBImpl.h  VendorIfc.cpp  VendorIfc.h  Version.h  mk.bat  tusb_config.h
ButtonLatencyTester2/WinHost/: BLTVendorInterface.cpp  BLTVendorInterface.h  ButtonLatencyTester2.cpp  ButtonLatencyTester2.vcxproj  HiResTimer.cpp  HiResTimer.h  RefPtr.h
ClearConfig/: .gitignore  CreateConfigClearerUF2.cpp  Makefile
CmdLineConfigTool/: CmdLineConfigTool.cpp  CmdLineConfigTool.vcxproj  CmdLineConfigTool.vcxproj.filters  VersionNumber.cpp  VersionNumber.h
ConfigDocParser/: ConfigDocParser.cpp  ConfigDocParser.h  ConfigDocParser.vcxproj  ConfigDocParser.vcxproj.filters
ExpansionBoards/: .gitattributes  README.md
ExpansionBoards/DIY-Friendly/: README.md
ExpansionBoards/FlasherPanel/: FlasherPanel-BOM.csv  FlasherPanel.epro  README.md
ExpansionBoards/IR-RX/: IR Receiver.brd  IR Receiver.sch  IR-Receiver.brd  IR-Receiver.sch  Pinscape Pico IR-Receiver BOM.csv  README.md  eagle.epf
ExpansionBoards/IR-TX/: README.md
ExpansionBoards/KL25Z-Adapter/: Pinscape Pico-KL25Z Adapter.brd  Pinscape Pico-KL25Z Adapter.sch  PinscapePico KL25Z Adapter - 74HC165 vsn - BOM.csv  README.md  eagle.epf  (+5 more)
Firmware/: .gitignore  ADCManager.cpp  ADCManager.h  Accel.cpp  Accel.h  BootselButton.cpp  BootselButton.h  ButtonHelper.cpp  ButtonHelper.h  Buttons.cpp  Buttons.h  BytePackingUtils.h  CMakeLists.txt  CommandConsole.cpp  CommandConsole.h  Config.cpp  Config.h  ConfigTool.bat  ExpansionBoard.cpp  ExpansionBoard.h  FaultHandler.cpp  FaultHandler.h  FeedbackController.cpp  FlashStorage.cpp  FlashStorage.h  GPIOManager.cpp  GPIOManager.h  Gamepad.cpp  I2C.cpp  I2C.h  JSON.cpp  JSON.h  JSONConfigRef.txt  Keyboard.cpp  LedWizIfc.cpp  Logger.cpp  Logger.h  Main.cpp  Main.h  MultiCore.cpp  (+52 more)
Firmware/Devices/ADC/: ADS1115.cpp  ADS1115.h  PicoADC.cpp  PicoADC.h
Firmware/Devices/Accel/: LIS3DH.cpp  LIS3DH.h  LIS3DSH.cpp  LIS3DSH.h  MC3416.cpp  MC3416.h  MMA8451Q.cpp  MMA8451Q.h  MXC6655XA.cpp  MXC6655XA.h
Firmware/Devices/DistanceSensor/: VL6180X.cpp  VL6180X.h
Firmware/Devices/GPIOExt/: PCA9555.cpp  PCA9555.h
Firmware/Devices/LinearPhotoSensor/: TCD1103.cpp  TCD1103.h  TCD1103_FMneg.pio  TCD1103_FMpos.pio  TCD1103_ICGneg.pio  TCD1103_ICGpos.pio  TCD1103_SHneg.pio  TCD1103_SHpos.pio  TSL1410R.cpp  TSL1410R.h  TSL1410R_CLK.pio  TSL1410R_SI.pio
Firmware/Devices/PWM/: PCA9685.cpp  PCA9685.h  PWMWorker.cpp  PWMWorker.h  TLC59116.cpp  TLC59116.h  TLC5940.cpp  TLC5940.h  TLC5940_pio.pio  TLC5947.cpp  TLC5947.h  TLC5947_pio.pio
Firmware/Devices/ProxSensor/: VCNL4010.cpp  VCNL4010.h
Firmware/Devices/Quadrature/: AEDR8300.cpp  AEDR8300.h  QuadratureEncoder.cpp  QuadratureEncoder.h
Firmware/Devices/RTC/: DS1307.cpp  DS1307.h  DS3231M.cpp  DS3231M.h  I2CRTCBase.cpp  I2CRTCBase.h  RV3032C7.cpp  RV3032C7.h
Firmware/Devices/ShiftReg/: 74HC165.cpp  74HC165.h  74HC165_pio.pio  74HC595.cpp  74HC595.h  74HC595_dig_pio.pio  74HC595_pwm_pio.pio
Firmware/IRRemote/: CircBuf.h  IRCommand.cpp  IRCommand.h  IRProtocolID.h  IRProtocolList.h  IRProtocols.cpp  IRProtocols.h  IRReceiver.cpp  IRReceiver.h  IRRemote.h  IRTransmitter.cpp  IRTransmitter.h
Firmware/Notes/: UART_Debug_Notes.txt  XINPUT_Notes.txt
Firmware/Plunger/: LinearPhotoSensorPlunger.cpp  LinearPhotoSensorPlunger.h  Plunger.cpp  Plunger.h  PotPlunger.cpp  PotPlunger.h  ProxPlunger.cpp  ProxPlunger.h  QuadraturePlunger.cpp  QuadraturePlunger.h  ZBLaunch.cpp  ZBLaunch.h
GUIConfigTool/: AboutBox.cpp  AboutBox.h  Application.cpp  Application.h  BaseDeviceWindow.cpp  BaseDeviceWindow.h  BaseWindow.cpp  BaseWindow.h  BootLoaderWin.cpp  BootLoaderWin.h  ButtonTesterWin.cpp  ButtonTesterWin.h  ConfigEditorWin.cpp  ConfigEditorWin.h  DeviceOverviewWin.cpp  DeviceOverviewWin.h  DeviceThreadWindow.cpp  DeviceThreadWindow.h  Dialog.cpp  Dialog.h  FirmwareDropTarget.cpp  FirmwareDropTarget.h  FlashProgressDialog.cpp  FlashProgressDialog.h  GUIConfigTool.cpp  GUIConfigTool.rc  GUIConfigTool.vcxproj  GUIConfigTool.vcxproj.filters  GUIConfigToolOutputTester.vcxproj.filters  HelpWin.cpp  HelpWin.h  HiResTimer.cpp  HiResTimer.h  IRTesterWin.cpp  IRTesterWin.h  JSONExt.cpp  JSONExt.h  LogViewerWin.cpp  LogViewerWin.h  MicroPinSim.cpp  (+24 more)
Guides/: LIS3DH-Setup.md  MMA8451Q-Setup.md
Notes/: Release-Build-Notes.txt
OpenPinballDevice/: .gitignore  License  NewPinCabInput.css  NewPinCabInput.htm  OpenPinballDeviceHID.css  OpenPinballDeviceHID.htm  OpenPinballDeviceReport.h  README.md
PWMWorker/: .gitignore  CMakeLists.txt  Logger.cpp  Logger.h  PWMManager.cpp  PWMManager.h  PWMWorker.cpp  PWMWorker.h  PWM_pio.pio  PWM_pio.pio.h  PicoLED.cpp  PicoLED.h  README.md  SetPWMWorkerAddr.cpp  SetPWMWorkerAddr.mak  SetPWMWorkerAddr.sln  SetPWMWorkerAddr.vcxproj  SetPWMWorkerAddr.vcxproj.filters  Util.h  mk.bat
PWMWorker/DataSheet/: PWMWorkerDataSheet.htm
Scintilla/: .gitignore
StatusLED/: StatusLED.cpp  StatusLED.rc  StatusLED.vcxproj  StatusLED.vcxproj.filters  resource.h
USBProtocol/: CompilerSpecific.h  FeedbackControllerProtocol.h  README.md  VendorIfcProtocol.h
WinAPI/: BytePackingUtils.h  FeedbackControllerInterface.cpp  FeedbackControllerInterface.h  PicoClockSync.cpp  PicoClockSync.h  PinscapePicoAPI.h  PinscapePicoAPI.vcxproj  PinscapePicoAPI.vcxproj.filters  PinscapeVendorInterface.cpp  PinscapeVendorInterface.h  README.md  RP2BootLoaderInterface.cpp  RP2BootLoaderInterface.h  Utilities.h
(+115 files in other folders)
